Fix width of items on IE

--- a/app/assets/stylesheets/elements/_item.scss
+++ b/app/assets/stylesheets/elements/_item.scss
@@ -9,6 +9,7 @@
 
 .item {
   width: 100%;
+  flex: 0 0 100%;
   position: relative;
   margin-bottom: $margin / 2;
   filter: drop-shadow(0 6px 32px rgba($black, .05)) drop-shadow(0 2px 4px rgba($black, .2));
